--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<relativePath />
 	</parent>
 
-	<groupId>com.gabrielnilsonespindola</groupId>
+	<groupId>digital.signature.project</groupId>
 	<artifactId>digital-signature-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>digital-signature-project</name>
@@ -31,19 +31,16 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
@@ -56,13 +53,11 @@
 			<version>1.70</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.15.1</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -70,7 +65,6 @@
 			<version>1.18.32</version>
 			<scope>provided</scope>
 		</dependency>
-
 
 		<dependency>
 			<groupId>com.h2database</groupId>
