--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: Java CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - test-branch-CI
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - test-branch-CI
 
 jobs:
   build:
