--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: Java CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - test-branch-CI
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - test-branch-CI
 
 jobs:
   build:
@@ -20,5 +24,5 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Build com Maven e rodar testes
-      run: mvn clean verify
+    - name: Build com Maven sem rodar testes
+      run: mvn clean install -DskipTests
